Send pulse count by radio (virtualwire)

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,8 @@ platform = lgt8f
 board = LGT8F328P
 framework = arduino
 monitor_speed = 115200
+#monitor_port = COM8
+#upload_port = COM8
+lib_deps = 
+	mikem/VirtualWire@^1.27
+	embeddedartistry/LibPrintf@^1.2.13
